Reset Password COmpleted

--- a/views/forgot_password.html
+++ b/views/forgot_password.html
@@ -38,19 +38,15 @@
 
 <body>
 
-    
-	<body>
-
     <!--==========================
-  Header
-============================-->
+    Header
+    ============================-->
     <header id="header">
         <div class="container">
 
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
-                <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo"
-                        title="Innovision'19"></a>
+                <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo" title="Innovision'19"></a>
                 <h1><a href="#"><span>innovision'19</span></a></h1>
             </div>
 
@@ -64,14 +60,14 @@
                         <div class="dropdown-content">
                             <a href="eventsSection.html#EventsSection">Event Schedule</a>
                             <a href="eventsSection.html#flagships1">Flagship Events</a>
-                        	<a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
+                            <a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
                             <a href="eventsSection.html#events1">Events</a>
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
-                        	<a href="eventsSection.html#funevents1">Fun Events</a>
-                        	<a href="eventsSection.html#special1">Special Events</a>
+                            <a href="eventsSection.html#funevents1">Fun Events</a>
+                            <a href="eventsSection.html#special1">Special Events</a>
                         </div>
 
                     </li>
@@ -88,19 +84,41 @@
         </div>
     </header>
     <!-- #header -->
-	<section id="signin_id" class="section-with-bg">
+
+    <section id="signin_id" class="section-with-bg">
         <div class="container wow fadeInUp">
-
             <div class="tab-content row justify-content-center" id="login_inno">
+                <div role="tabpanel" class="col-lg-7  tab-pane fade show active" id="resetForm" style="background-color: #0e1735;" align="center">
 
-                
+                    <h2 style="color:white">Reset Password</h2>
+
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <input type="text" class="form-control" id="pwd" placeholder="New Password" name="password">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <input type="password" class="form-control" id="cnf_pwd" placeholder="Confirm New Password" name="cnf_password">
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-12" align="center">
+                            <button id="reset_button" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </section>
 
     <!--==========================
     Footer
-  ============================-->
+    ============================-->
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
@@ -108,12 +126,9 @@
 
                     <div class="col-lg-3 col-md-6 footer-info">
                         <img src="../assets/images/inno_logo.png" alt="Inno logo">
-                        <p>Innovision is the annual techno-management festival of NIT Rourkela organized by the
-                            students. It has
-                            been fuelling innovations and encouraging millions since 2004 and is a unique forum where
-                            the youth gets
-                            the opportunity to explore and experience science and technology in all its myriad forms.
-                            .</p>
+                        <p>Innovision is the annual techno-management festival of NIT Rourkela organized by the students. It has been fuelling innovations and encouraging millions since 2004 and is a unique forum where the youth gets the opportunity to explore
+                            and experience science and technology in all its myriad forms. .
+                        </p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
@@ -168,17 +183,9 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-info">
-                        <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png"
-                                alt="NITR Logo"> </a>
-                        <p>NIT Rourkela (formerly REC Rourkela) is an institute of national importance, with UG, PG, and
-                            research
-                            programs in engineering and science. It is a publicly funded institute of higher learning
-                            for engineering
-                            and technology located in the steel city of Rourkela, Odisha, India. It is one of the 30
-                            National
-                            Institutes of Technology in India and has been recognized as an Institute of National
-                            Importance by the
-                            National Institutes of Technology Act, 2007.
+                        <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png" alt="NITR Logo"> </a>
+                        <p>NIT Rourkela (formerly REC Rourkela) is an institute of national importance, with UG, PG, and research programs in engineering and science. It is a publicly funded institute of higher learning for engineering and technology located
+                            in the steel city of Rourkela, Odisha, India. It is one of the 30 National Institutes of Technology in India and has been recognized as an Institute of National Importance by the National Institutes of Technology Act, 2007.
                         </p>
                     </div>
 
@@ -223,32 +230,11 @@
 
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<!--     <script src="../assets/js/sweetalert.js"></script> -->
+
+    <!--     <script src="../assets/js/sweetalert.js"></script> -->
     <script src="../assets/lib/sweetalert/sweetalert.js"></script>
 
-    <script src="../assets/js/ajax/login_registration.js">
-    </script>
-    <script>
-      var q = localStorage.getItem("token");
-      if(q)
-      {
-            $.ajax({
-                url:'../apis/user/auth/profile.php',
-                beforeSend: function(request){
-                    request.setRequestHeader('Authorization', 'Bearer ' + q);
-                },
-                type: 'get',
-                    success:function(response)
-                    {
-                   response = JSON.parse(response);
-                    if (response.status == "success") {
-                   // $("#log_btn").hide();
-                   $('.log_btn').html('Profile').attr('href','profile.html')
-                  }
-              }
-            });
-      }
+    <script src="../assets/js/ajax/reset_password.js">
     </script>
 
 </body>
