--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -117,7 +117,7 @@
             <center>
                 <h1 id="checkit"></h1>
             </center>
-            <table class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
+            <table id="event-registered" class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -126,13 +126,35 @@
                         <th>Phone Number</th>
                         <th>Email Address</th>
                         <th>Institution</th>
+                        <th>Click to Check-In</th>
                     </tr>
                 </thead>
                 <tbody id="dp">
 
                 </tbody>
             </table>
+            <table id="special-event-registered" class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Inno ID</th>
+                        <th>Name</th>
+                        <th>Phone Number</th>
+                        <th>Email Address</th>
+                        <th>Institution</th>
+                        <th>Graduation Year</th>
+                        <th>Number of Backlogs</th>
+                        <th>CV Link</th>
+                        <th>CGPA</th>
+                        <th>Click to Check-In</th>
+                    </tr>
+                </thead>
+                <tbody id="dp-special">
+
+                </tbody>
+            </table>
         </div>
+
     </div>
 
 
@@ -141,7 +163,8 @@
             <center>
                 <h1>Checked In List</h1>
             </center>
-            <table class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
+            <br>
+            <table id = "checkedin-table"class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -150,9 +173,30 @@
                         <th>Phone Number</th>
                         <th>Email Address</th>
                         <th>Institution</th>
+                        <th>Click to Uncheck</th>
                     </tr>
                 </thead>
                 <tbody id="cil">
+
+                </tbody>
+            </table>
+            <table id = "special-checkedin-table"class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Inno ID</th>
+                        <th>Name</th>
+                        <th>Phone Number</th>
+                        <th>Email Address</th>
+                        <th>Institution</th>
+                        <th>Graduation Year</th>
+                        <th>Number of Backlogs</th>
+                        <th>CV Link</th>
+                        <th>CGPA</th>
+                        <th>Click to Uncheck</th>
+                    </tr>
+                </thead>
+                <tbody id="cil-special">
 
                 </tbody>
             </table>
