--- a/views/requirements-admin/eventList.html
+++ b/views/requirements-admin/eventList.html
@@ -1,8 +1,8 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="../../../assets/css/style.css">
+<link rel="stylesheet" href="../../assets/css/style.css">
 <link rel="stylesheet" href="edit.css".css">
-<script src="../../../assets/lib/jquery/jquery.min.js"></script>
+<script src="../../assets/lib/jquery/jquery.min.js"></script>
 
 <body style="background-color: #FBC02D">
     <br>
@@ -31,12 +31,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <th></th>
                             <th></th>
                             <th></th>
                             <th><a class="req-link" href="editReq.html">Edit Requirements</a></th>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
@@ -47,9 +47,9 @@
 
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../../../assets/lib/sweetalert/sweetalert.js"></script>
-    <script src="../../../assets/js/ajax/fetchingCAResponses.js"></script>
-    
+    <script src="../../assets/lib/sweetalert/sweetalert.js"></script>
+    <script src="../../assets/js/ajax/fetchReqevents.js"></script>
+     
     <script>
         $(document).on("click", ".logout-button", function() {
             window.location.assign("./index.html");
