--- a/views/requirements-admin/editReq.html
+++ b/views/requirements-admin/editReq.html
@@ -11,8 +11,11 @@
                 <h1 style="display: inline">
                     <b>Event Requirements</b>
                 </h1>
+                <button style="float: left;" class="btn btn-info" onclick="location.href = 'eventList.html'">Back</button>
+
                 <button style="float: right" class="btn btn-info logout-button" onclick="location.href = 'index.html'">Logout</button>
             </div>
+                <h3 id="event_name"></h3>
         </center>
     </div>
     
@@ -29,31 +32,31 @@
 
             <div class="form-group stn">
                 <h3>Add the requirements from Stationary category</h3>
-                <textarea placeholder="Required Items" type="text" id="stnRequired" rows="10" cols="75"></textarea>
-                <textarea placeholder="Items Left to give" type="text" id="stnleft" rows="10" cols="45"></textarea>
+                <textarea placeholder="Left Items" type="text" id="stnRequired" rows="10" cols="75"></textarea>
+                <textarea placeholder="Items given" type="text" id="stnleft" rows="10" cols="45"></textarea>
             </div>
             
             <div class="form-group wood">
                 <h3>Add the requirements from Wooden category</h3>
-                <textarea placeholder="Required Items" type="text" id="woodRequired" rows="10" cols="75"></textarea>
-                <textarea placeholder="Items Left to give" type="text" id="woodLeft" rows="10" cols="45"></textarea>
+                <textarea placeholder="Left Items" type="text" id="woodRequired" rows="10" cols="75"></textarea>
+                <textarea placeholder="Items given" type="text" id="woodLeft" rows="10" cols="45"></textarea>
             </div>
             
             <div class="form-group elec">
                 <h3>Add the requirements from Electrical category</h3>
-                <textarea placeholder="Required Items" type="text" id="elecRrequired" rows="10" cols="75"></textarea>
-                <textarea placeholder="Items Left to give" type="text" id="elecLeft" rows="10" cols="45"></textarea>
+                <textarea placeholder="Left Items" type="text" id="elecRrequired" rows="10" cols="75"></textarea>
+                <textarea placeholder="Items given" type="text" id="elecLeft" rows="10" cols="45"></textarea>
             </div>
             
             <div class="form-group misc">
                 <h3>Add the requirements from miscellaneous category</h3>
-                <textarea placeholder="Required Items" type="text" id="miscRequired" rows="10" cols="75"></textarea>
-                <textarea placeholder="Items Left to give" type="text" id="miscLeft" rows="10" cols="45"></textarea>
+                <textarea placeholder="Left Items" type="text" id="miscRequired" rows="10" cols="75"></textarea>
+                <textarea placeholder="Items given" type="text" id="miscLeft" rows="10" cols="45"></textarea>
             </div>
 
             <br> <br>
 
-            <input class="submit btn btn-dark btn-lg" type="submit" value="submit">
+            <button class="submit btn btn-dark btn-lg" type="submit" id="submit_req">Submit</button>
 
         </form>
 
@@ -62,6 +65,9 @@
 
     <script src="../../assets/lib/jquery/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../../assets/lib/sweetalert/sweetalert.js"></script>
+    <script src="../../assets/js/ajax/req_details.js"></script>
+
 
     
     <script>
@@ -91,11 +97,11 @@
         });
     </script>
     
-    <!-- <script>
+    <script>
         $(document).ready(function() {
             if (!(localStorage.cms_token)) window.location.assign("./index.html");
         });
-    </script> -->
+    </script>
 
 </body>
 
