--- a/views/requirements-admin/index.html
+++ b/views/requirements-admin/index.html
@@ -1,8 +1,8 @@
 <html>
-<link rel="stylesheet" href="../../../assets/lib/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../assets/lib/bootstrap/css/bootstrap.min.css">
 <!-- <link rel="stylesheet" href="stylesheets/style.css"> -->
-<script src="../../../assets/lib/jquery/jquery.min.js"></script>
-
+<script src="../../assets/lib/jquery/jquery.min.js"></script>
+ 
 
 <body style="background-color: #FBC02D">
     <br>
@@ -10,7 +10,7 @@
         <center>
             <div class="row" style="margin-top: 8em">
                 <h1>
-                    <b>CMS SIGN-IN</b>
+                    <b>CMS REQUIREMENTS SIGN-IN</b>
                 </h1>
             </div>
 
@@ -56,7 +56,7 @@
             // console.log($("#pwd").val());
             $.ajax({
                 type: "POST",
-                url: "../../../apis/admin/ca/login.php",
+                url: "../../apis/admin/requirements/login.php",
                 data: {
                     username: $("#id").val().toString(),
                     password: $("#pwd").val().toString()
@@ -66,7 +66,7 @@
                     var dataSet = JSON.parse(data);
                     if (dataSet["status"].localeCompare("success") == 0) {
                         localStorage.cms_token = dataSet["result"];
-                        window.location.assign("./CAList.html");
+                        window.location.assign("./eventList.html");
                     } else {
                         alert(dataSet["result"]);
                     }
