--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -95,6 +95,9 @@
             $("#checkit").html('All Registration for event_ = ' + localStorage.name);
         });
     </script>
+    <br>
+    <br>
+    <center><button class="btn btn-primary" onclick="location.href = 'req.html?eid='+localStorage.eid">View Requirements</button></center>
     <div class="container-fluid" style="background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);margin-top:2em">
         <div class="row" style="padding:1em;overflow-x: auto;overflow-y: auto;">
             <h1>NOTICE</h1>
