--- a/views/event/coordinator/req.html
+++ b/views/event/coordinator/req.html
@@ -17,14 +17,14 @@
             </div>
         </center>
     </div>
-    
+
     <div class="container" style="background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);margin-top: 10vh;">
         <div class="row" style="margin-top: 4em">
-        
-            <div class="col-md-12">
+
+            <div class="col-md-12 requirements">
                 <div class="row">
-                    <h2>Stationary</h2><br>
-                    <div class="col-md-6">
+                    <h2 style="font-weight: 600;">Stationary</h2><br>
+                    <div class="col-md-6" style="border-right: solid 3px #7216d7;">
                         <h3>Left</h3>
                         <div id="c1_left"></div>
                     </div>
@@ -35,8 +35,8 @@
                 </div>
 
                 <div class="row">
-                    <h2>Wooden</h2><br>
-                    <div class="col-md-6">
+                    <h2 style="font-weight: 600;">Wooden</h2><br>
+                    <div class="col-md-6" style="border-right: solid 3px #7216d7;">
                         <h3>Left</h3>
                         <div id="c2_left"></div>
                     </div>
@@ -47,8 +47,8 @@
                 </div>
 
                 <div class="row">
-                    <h2>Electrical</h2><br>
-                    <div class="col-md-6">
+                    <h2 style="font-weight: 600;">Electrical</h2><br>
+                    <div class="col-md-6" style="border-right: solid 3px #7216d7;">
                         <h3>Left</h3>
                         <div id="c3_left"></div>
                     </div>
@@ -59,8 +59,8 @@
                 </div>
 
                 <div class="row">
-                    <h2>Misc</h2><br>
-                    <div class="col-md-6">
+                    <h2 style="font-weight: 600;">Misc</h2><br>
+                    <div class="col-md-6" style="border-right: solid 3px #7216d7;">
                         <h3>Left</h3>
                         <div id="c4_left"></div>
                     </div>
@@ -72,21 +72,21 @@
 
                 <br>
                 <br>
-                <br>              
-                </div>
-
+                <br>
             </div>
+
         </div>
     </div>
     </div>
-  
+    </div>
+
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- <script src="../../../assets/lib/bootstrap/js/bootstrap.min.js"></script> -->
+    <!-- <script src="../../../assets/lib/bootstrap/js/bootstrap.min.js"></script> -->
     <script src="../../../assets/lib/sweetalert/sweetalert.js"></script>
     <script src="../../../assets/js/ajax/coor_req_details.js"></script>
 
-    
+
     <script>
         $(document).on("click", ".logout-button", function() {
             window.location.assign("./index.html");
