--- a/views/participants-admin/admin_panel.html
+++ b/views/participants-admin/admin_panel.html
@@ -62,6 +62,7 @@
                     <input type="text" id="inputId" class="form-control" placeholder="search..">
                     <button class="z" id="searchBtn">search</button>
                     <button class="z submit_button">Update</button>
+                <h2>Paid participants <span id="paidCount"></span></h2>
                 </div>
                 <table class="table table-bordered table-responsive table-sc" style="display:table;background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
                     <thead>
