--- a/views/event-details.html
+++ b/views/event-details.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+	<meta name="title" content="This is event title">
 
     <!-- Favicons -->
     <link href="../assets/images/Innovision_Logo.ico" rel="icon">
