--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -46,7 +46,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-        <h1><a href="#"><span>innovision'19</span></a></h1>
+        <h1><a href="#"><span>Innovision'19</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -75,7 +75,7 @@
                   <li><a href="#gallery">Gallery</a></li> -->
           <li><a href="sponsor.html">Sponsors</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
-          <li class="buy-tickets"><a href="login.html" class="log_btn">Login/Register</a></li>
+          <li class="buy-tickets"><a href="login.html" class="log_btn">Login/Signup</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -95,7 +95,7 @@
             <div class="container wow fadeInUp">
                 <div class="section-header">
                     <h2>Event Schedule</h2>
-                    <p>here is our schedule for all our events</p>
+                   
                 </div>
 
                 <ul class="nav nav-tabs" role="tablist">
