--- a/views/forgot_password.html
+++ b/views/forgot_password.html
@@ -77,7 +77,7 @@
                   <li><a href="#gallery">Gallery</a></li> -->
                     <li><a href="sponsor.html">Sponsors</a></li>
                     <!-- <li><a href="#contact">Contact</a></li> -->
-                    <li class="buy-tickets menu-active"><a href="login.html" class="log_btn">Login/Register</a></li>
+                    <li class="buy-tickets menu-active"><a href="login.html" class="log_btn">Login/Signup</a></li>
                 </ul>
             </nav>
             <!-- #nav-menu-container -->
