--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -24,7 +24,7 @@
           $("tbody").append(temp);
     }
   </script> -->
-    <div class="container" style="width:40%;padding:3em;background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);">
+    <div class="container" style="padding:3em;background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);">
         <h2 style="color:red">Read the instructions carefully before proceeding for submission of winners and runners results</h2>
         <ul>
             <!-- <li>
@@ -58,7 +58,7 @@
             $(".result").css("display", "block");
         });
     </script>
-    <div class="container result" style="width:40%;padding:3em;background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);display:none">
+    <div class="container result" style="padding:3em;background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);display:none">
         <div class="row" style="margin-top: 1em">
             <form class="form-horizontal">
                 <div class="form-group">
@@ -96,7 +96,7 @@
         });
     </script>
     <div class="container-fluid" style="background-color: #FFF;border-radius: 2px;box-shadow: 0px 3px 8px rgba(0,0,0,0.25);margin-top:2em">
-        <div class="row" style="padding:1em;overflow-x: auto;overflow-y: auto;">
+        <!-- <div class="row" style="padding:1em;overflow-x: auto;overflow-y: auto;">
             <h1>NOTICE</h1>
             <ol type="A">
                 <li>Event co-ordinators need to <b>check all the participants in</b> before allowing them in their event.
@@ -112,7 +112,7 @@
                             the event.'</b> will appear. Please ask them to register to your event first in website.</li>
                 <li>In any other cases please try again.</li>
             </ol>
-        </div>
+        </div> -->
         <div class="row" style="padding:1em;overflow-x: auto;overflow-y: auto;">
             <center>
                 <h1 id="checkit"></h1>
@@ -165,7 +165,7 @@
             </center>
             <br>
 
-            <table id = "checkedin-table"class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
+            <table id="checkedin-table" class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
 
                 <thead>
                     <tr>
@@ -182,7 +182,7 @@
 
                 </tbody>
             </table>
-            <table id = "special-checkedin-table"class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
+            <table id="special-checkedin-table" class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
                 <thead>
                     <tr>
                         <th>#</th>
