added cache expiry meta to events details

--- a/views/event-details.html
+++ b/views/event-details.html
@@ -8,6 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
     <meta name="title" content="This is event title">
+	<meta http-equiv="expires" content="0">
 
     <!-- Favicons -->
     <link href="../assets/images/Innovision_Logo.ico" rel="icon">
