--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -57,6 +57,7 @@
                             <a href="eventsSection.html#events1">Events</a>
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
+                        	<a href="eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
                         	<a href="eventsSection.html#funevents1">Fun Events</a>
@@ -149,6 +150,36 @@
                                      Ans. Actually, there are events which have no entry fees but some events have. It differs
                             for each event.
 
+                                </p>
+                            </div>
+                        </li>
+                    
+                    	<li>
+                            <a data-toggle="collapse" href="#faq6" class="collapsed">What is 
+                            the refund policy if I don't want to join Innovision'19? <i class="fa fa-minus-circle"></i></a>
+                            <div id="faq6" class="collapse" data-parent="#faq-list">
+                                <p>
+                                     Ans. The amount once paid can't be refunded under any circumstances.
+                                </p>
+                            </div>
+                        </li>
+                    
+                    	<li>
+                            <a data-toggle="collapse" href="#faq7" class="collapsed">Is the ticket
+                            transferable if I don't want to join Innovision'19? <i class="fa fa-minus-circle"></i></a>
+                            <div id="faq7" class="collapse" data-parent="#faq-list">
+                                <p>
+                                     Ans. The tickets are non-transferable and non-refundable.
+                                </p>
+                            </div>
+                        </li>
+                    
+                    	<li>
+                            <a data-toggle="collapse" href="#faq8" class="collapsed">Is accomodation included in the registration fees? <i class="fa fa-minus-circle"></i></a>
+                            <div id="faq8" class="collapse" data-parent="#faq-list">
+                                <p>
+                                     Ans. Yes, Innovision team will take care of the accomodation. 
+                                However the participants will have to take care of the fooding on their own.
                                 </p>
                             </div>
                         </li>
