--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -74,6 +74,7 @@
                 <a href="../eventsSection.html#events">Events</a>
                 <a href="../eventsSection.html#workshops">Workshops</a>
                 <a href="../eventsSection.html#paidworkshops">Workshops (Paid)</a>
+            	<a href="../eventsSection.html#guestlect">Guest Lectures</a>
                 <a href="../eventsSection.html#exhibitions">Exhibitions</a>
                 <a href="../eventsSection.html#cultural">Pro Shows</a>
                 <a href="../eventsSection.html#funevents">Fun Events</a>
