--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -62,6 +62,7 @@
               <a href="#events1">Events</a>
               <a href="#workshops1">Workshops</a>
               <a href="#workshops2">Workshops (Paid)</a>
+              <a href="#guestlect">Guest Lectures</a>
               <a href="#exhibitions1">Exhibitions</a>
               <a href="#cultural1">Pro Shows</a>
               <a href="#funevents1">Fun Events</a>
@@ -235,7 +236,16 @@
                 <div id="paidworkshops">
                 
                 </div>
-
+				
+            
+            	<div class="target" id="guestlect">
+				    
+                </div>
+            	<h3>Guest Lectures </h3>
+                
+                <div id="guest_lec">
+                
+                </div>
 
 			    <div class="target" id="exhibitions1">
 				    
