--- a/views/login.html
+++ b/views/login.html
@@ -64,6 +64,7 @@
                             <a href="eventsSection.html#events1">Events</a>
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
+                        	<a href="eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
                         	<a href="eventsSection.html#funevents1">Fun Events</a>
@@ -139,7 +140,7 @@
 
                         <br>
                         <div class="form-group" style="color:white" id="ca_apply">
-                            <label class="control-label col-sm-8" for="" style="color:white">Do you want to register through CA?</label>
+                            <label class="control-label col-sm-8" for="" style="color:white">Do you want to register through Campus Ambassador?</label>
                             <form>
                                 <label> 
                                     <input type="radio" name="ca_s" value="Yes"> &nbsp; Yes &nbsp; 
