--- a/views/profile.html
+++ b/views/profile.html
@@ -66,6 +66,7 @@
                             <a href="eventsSection.html#events1">Events</a>
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
+                        	<a href="eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
                         	<a href="eventsSection.html#funevents1">Fun Events</a>
@@ -112,7 +113,8 @@
                     <h3 style="color: white;" id="participant_id"></h3>
                 	<h3 style="color: white;" id="participant_ca_id"></h3>
                     <br><br>
-                    <a id="paymentBtn" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
+<!--                 <h2 style="color:white">Payment is temporarily disabled !</h2> -->
+                    <a id="paymentBtn"  class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
                     <h2 id="paidMsg" style="color:white">You have already Paid !</h2>
                     <button class="about-btn" style="background-color: black;" id="ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
                 </div>
