--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -64,6 +64,7 @@
               <a href="eventsSection.html#events1">Events</a>
               <a href="eventsSection.html#workshops1">Workshops</a>
               <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
+              <a href="eventsSection.html#guestlect">Guest Lectures</a>
               <a href="eventsSection.html#exhibitions1">Exhibitions</a>
               <a href="eventsSection.html#cultural1">Pro Shows</a>
               <a href="eventsSection.html#funevents1">Fun Events</a>
