--- a/views/event-details.html
+++ b/views/event-details.html
@@ -2,12 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Event Details</title>
+    <meta charset="utf-8">    
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-    <meta name="title" content="This is event title">
 	<meta http-equiv="expires" content="0">
 
     <!-- Favicons -->
@@ -67,6 +63,7 @@
                             <a href="eventsSection.html#events1">Events</a>
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
+                        	<a href="eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
                             <a href="eventsSection.html#funevents1">Fun Events</a>
