--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -371,7 +371,7 @@
 
         function changetxt(){
             var x=document.getElementById("txt");
-            x.style.changetxt = x.style.changetxt == "sakshi" :"amiya" ;
+            x.style.changetxt = x.style.changetxt == "sakshi" :"satyajit" ;
 
 
           }
