revert lib edits

--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -69,9 +69,7 @@
                     <li class="menu-active"><a href="FAQ.html">FAQ</a></li>
                     <li><a href="#" data-toggle="modal" data-target="#exampleModal">ContactUs</a></li>
                     <!-- <li><a href="#hotels">Hotels</a></li>
-                  <li><a href="#gallery">Gallery</a></li> -->
-                    <li><a href="sponsor.html">Sponsors</a></li>
-                    <li><a href="#" data-toggle="modal" data-target="#exampleModal">ContactUs</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->                    
                     <!-- <li><a href="#contact">Contact</a></li> -->
                     <li class="buy-tickets"><a href="login.html"  class="log_btn">Login/Register</a></li>
                 </ul>
@@ -90,9 +88,9 @@
         </button>
       </div>
       <div class="modal-body">
-            <p style="color: #ffffff;  font-family: 'Open Sans';" id="txt">Krishnaja:<a href="tel:6281630205" style="margin-left: 10px;"><i class="fa fa-phone">6281630205</i></a></p>
+            <p style="font-family: 'Open Sans';" id="txt">Krishnaja:<a href="tel:6281630205" style="margin-left: 10px;"><i class="fa fa-phone">6281630205</i></a></p>
             
-            <p style="color: #ffffff;  font-family: 'Open Sans';">Ritik Purohit:<a href="tel:7008546399" style="margin-left: 10px;"><i class="fa fa-phone">7008546399</i></a></p>
+            <p style="font-family: 'Open Sans';">Ritik Purohit:<a href="tel:7008546399" style="margin-left: 10px;"><i class="fa fa-phone">7008546399</i></a></p>
 
       </div>
       <div class="modal-footer">
