--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -89,9 +89,9 @@
         </button>
       </div>
       <div class="modal-body">
-            <p style="color: #ffffff;  font-family: 'Open Sans';">Krishnaja:<a href="tel:6281630205" style="margin-left: 10px;"><i class="fa fa-phone">6281630205</i></a></p>
+            <p style="font-family: 'Open Sans';">Krishnaja:<a href="tel:6281630205" style="margin-left: 10px;"><i class="fa fa-phone">6281630205</i></a></p>
             
-            <p style="color: #ffffff;  font-family: 'Open Sans';">Ritik Purohit:<a href="tel:7008546399" style="margin-left: 10px;"><i class="fa fa-phone">7008546399</i></a></p>
+            <p style="font-family: 'Open Sans';">Ritik Purohit:<a href="tel:7008546399" style="margin-left: 10px;"><i class="fa fa-phone">7008546399</i></a></p>
 
       </div>
       <div class="modal-footer">
