show paid field in coordinator

--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -129,6 +129,7 @@
                         <th>Phone Number</th>
                         <th>Email Address</th>
                         <th>Institution</th>
+                        <th>Paid</th>
                         <th>Click to Check-In</th>
                     </tr>
                 </thead>
@@ -178,6 +179,7 @@
                         <th>Phone Number</th>
                         <th>Email Address</th>
                         <th>Institution</th>
+                        <th>Paid</th>
                         <th>Click to Uncheck</th>
                     </tr>
                 </thead>
